--- a/file_example1/file_example1.vcxproj.filters
+++ b/file_example1/file_example1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="file_stream.cpp">
+    <ClCompile Include="file example 1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
