--- a/file_example1/file_example1.vcxproj
+++ b/file_example1/file_example1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{05fcf6ce-ebed-473f-8755-52dff8c57b07}</ProjectGuid>
-    <RootNamespace>filestream</RootNamespace>
+    <ProjectGuid>{eb38ce84-8142-4eef-9936-476bc15b912e}</ProjectGuid>
+    <RootNamespace>fileexample1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="file_stream.cpp" />
+    <ClCompile Include="file example 1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
