--- a/lesson 3/delegation/delegation.vcxproj
+++ b/lesson 3/delegation/delegation.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bbd381de-5c7f-4b17-b79b-8b1b320a3c44}</ProjectGuid>
-    <RootNamespace>ConstructorDestructorThis</RootNamespace>
+    <ProjectGuid>{2c88b50b-c0ce-493f-a1dd-7067cf42f67a}</ProjectGuid>
+    <RootNamespace>delegation</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Constructor, Destructor.cpp" />
+    <ClCompile Include="delegation.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
